--- a/Test/System/SimpleStyle/SkinConfig.ini
+++ b/Test/System/SimpleStyle/SkinConfig.ini
@@ -9,6 +9,8 @@ Game_Score_Size=26,34
 Game_Taiko_NamePlate_X=-5,-5
 Game_Taiko_NamePlate_Y=297,371
 
+SongSelect_Auto_X=35,950
+SongSelect_Auto_Y=642,645
 
 ; "#include ファイル名" 命令を使うことで
 ; 外部ファイルを読み込んで使用することができるようになります
